fix(security): single-source CORS policy, new frontend origin, PATCH support (#66)